third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/conflicting_derive.rs
#[derive(num_enum::FromPrimitive, num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero,
    #[num_enum(default)]
    One,
}

fn main() {

}
