third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/conflicting_derive.stderr
error[E0119]: conflicting implementations of trait `CannotDeriveBothFromPrimitiveAndTryFromPrimitive` for type `Numbers`
 --> tests/try_build/compile_fail/conflicting_derive.rs:1:35
  |
1 | #[derive(num_enum::FromPrimitive, num_enum::TryFromPrimitive)]
  |          -----------------------  ^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Numbers`
  |          |
  |          first implementation here
  |
  = note: this error originates in the derive macro `num_enum::TryFromPrimitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `TryFrom<u8>` for type `Numbers`
 --> tests/try_build/compile_fail/conflicting_derive.rs:1:35
  |
1 | #[derive(num_enum::FromPrimitive, num_enum::TryFromPrimitive)]
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: conflicting implementation in crate `core`:
          - impl<T, U> TryFrom<U> for T
            where U: Into<T>;
  = note: this error originates in the derive macro `num_enum::TryFromPrimitive` (in Nightly builds, run with -Z macro-backtrace for more info)
